<resources>
    <string name="app_name">Twitter\nMirroring</string>

    <!-- Menu names for BottomNavigationView component in Main Activity screen -->
    <string name="bnvHome">Home</string>
    <string name="bnvSearch">Search</string>
    <string name="bnvCommunities">Communities</string>
    <string name="bnvNotifications">Notifications</string>
    <string name="bnvDirectMessages">Messages</string>

    <!-- Basic info: User public name and Real Username texts and more -->
    <string name="publicUserName">Brais Moure</string>
    <string name="realUserName">"&#x40;MoureDev"</string>
    <string name="tweetContent">“you are strong and wise, and i am very proud of you.”</string>
<!--    <string name="hour">&#x20;·&#x20;7:49 AM</string>-->
    <string name="separatorDot">·</string>
    <string name="date">Jun 16, 2022</string>
    <string name="device"> Twitter for Android</string>
    <string name="timePosted">7:49&#x20;AM&#x20;·&#x20;</string>
    <string name="datePosted">Jun 16,&#x20;2022&#x20;·&#x20;</string>

    <!-- Common info: Indicators texts -->
    <string name="cantRetweets">120</string>
    <string name="labelCantReposts">Reposts</string>
    <string name="labelCantQuoteTweets">Quotes</string>
    <string name="cantQuoteTweets">12</string>
    <string name="labelCantTweetLikes">Likes</string>
    <string name="cantTweetLikes">963</string>
    <string name="labelCantTweetBookmarks">Bookmarks</string>
    <string name="cantTweetBookmarks">6</string>
    <string name="labelCantTweetViews">&#x20;Views</string>
    <string name="cantTweetViews">395</string>

    <!-- Labels for Content Tweet only Text-->
    <string name="contentTweetText">"Qué pena ver tantos palos entre devs.\n\nLo tengo claro:\n\nCualquier persona que esté dispuesta a compartir lo aprendido para ayudar al resto (independientemente de su grado de conocimiento), vale infinito más que la opinión de &#x22;Paco_75&#x22; esforzándose en decirte que sabe más que tú."</string>
    <string name="optionTranslateTweetText">Translate Tweet</string>
    <string name="dateText">16:22 · 28 Jun 2022 · </string>

    <!-- Tab's names for Search Fragment -->
    <string name="searchFragmentBarHint">Search X</string>
    <string name="searchFragmentTab_ForYou">For you</string>
    <string name="searchFragmentTab_Trending">Trending</string>
    <string name="searchFragmentTab_Covid19">COVID-19</string>
    <string name="searchFragmentTab_News">News</string>
    <string name="searchFragmentTab_Sports">Sports</string>
    <string name="searchFragmentTab_Entertainment">Entertainment</string>

    <!-- Texts for Communities Fragment -->
    <string name="spaceListeningText">listening</string>
    <!--    <string name="CommunitiesTitle">Communities</string>-->

    <!-- Tab's names for Notifications Fragment -->
    <string name="notificationsFragmentTab_All">All</string>
    <string name="notificationsFragmentTab_Verified">Verified</string>
    <string name="notificationsFragmentTab_Mentions">Mentions</string>
    <string name="notificationsFragmentNotifications">New Tweet notifications for <b>BLU Antioquia</b> and 4 others</string>
    <string name="notificationsFragmentLikes_PublicUserName">YUDDY18</string>
    <string name="notificationsFragmentLikes_LikesText">liked 2 of your Tweets</string>
    <string name="notificationsFragmentLikes_Summary">Una historia corta - Día 1\nideasincomodas.wordpress.com/2022/05/18/una&#8230; via @AgustinRTD</string>
    <string name="notificationsFragmentLikes_ShowAll">Show all</string>
    <string name="notificationsFragmentFollow_Text"><b>Victor Arias|</b> and <b>Don Cuervo</b> followed you</string>
    <string name="notificationsFragmentComment_PublicUserName">Victor Arias|</string>
    <string name="notificationsFragmentComment_RealUserName">"&#64;viariasv&#32;&#183;</string>
    <string name="notificationsFragmentComment_PublishedDate">19 May</string>
    <string name="notificationsFragmentComment_ReplyingText">Replying to</string>
    <string name="notificationsFragmentComment_MyPublicName">"&#64;AgustinRTD</string>
    <string name="notificationsFragmentComment_CommentText">Esta buena</string>
    <string name="notificationsFragment_cantReplies">120</string>
    <string name="notificationsFragment_cantRetweets">12</string>
    <string name="notificationsFragment_cantLikes">963</string>

    <!-- Tab's names for Direct Messages Fragment -->
    <string name="directMessageFragment_MessageText">Good morning, I just updated my Opera browser to the latest version yesterday, but it came to my&#8230; attention</string>
    <string name="directMessageFragment_PublicUserName">Opera</string>
    <string name="directMessageFragment_RealUserName">"&#64;opera&#32;&#183;</string>
    <string name="directMessageFragment_PublishDate">11 Dec 21</string>
    <string name="directMessageFragment_Title">Search Direct Messages</string>

    <!-- Content Description texts -->
    <string name="splashScreen">AppImageLogo</string>
    <string name="profilePicture">ProfilePicture</string>
    <string name="TODO">ToDo</string>
    <string name="toolbarTweetDetailTitle">Post</string>
</resources>