<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="@dimen/marginAllSides">

    <ImageView
        android:id="@+id/ivProfilePicture_Messages"
        android:layout_width="@dimen/directMessagesWidth"
        android:layout_height="@dimen/directMessagesHeight"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:contentDescription="@string/profilePicture"
        android:src="@drawable/profile_picture_3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/directMessagesHeight"
        android:layout_marginStart="@dimen/marginAllSides"
        android:layout_weight="9"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvPublicName_Messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directMessageFragment_PublicUserName"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/ivVerifiedLogo_Messages"
                android:layout_width="@dimen/generalSizeLogo"
                android:layout_height="@dimen/generalSizeLogo"
                android:layout_gravity="top"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/TODO"
                android:src="@drawable/ic_verified_account_blue_logo"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tvRealUsername_Messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:text="@string/directMessageFragment_RealUserName"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvTimePosted_Messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directMessageFragment_PublishDate"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvMessageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directMessageFragment_MessageText"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</LinearLayout>