<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".view.ui.fragments.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/marginSmallAllSides">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginAllSides"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivProfilePictureSearch"
                android:layout_width="@dimen/profilePictureWidthSize"
                android:layout_height="@dimen/profilePictureHeightSize"
                android:src="@drawable/profile_picture"/>

            <EditText
                android:id="@+id/etSearchBox"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/sidesMarginSize"
                android:layout_marginEnd="@dimen/sidesMarginSize"
                android:layout_weight="4"
                android:background="@drawable/shape_searches"
                android:hint="@string/searchFragmentBarHint"
                android:inputType="text"
                android:paddingStart="8dp"/>

            <ImageView
                android:id="@+id/ivExploreSettings"
                android:layout_width="@dimen/optionsWidthSize"
                android:layout_height="@dimen/optionsHeightSize"
                android:src="@drawable/ic_settings_logo"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlSearchFragment_MainTabMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchFragmentTab_ForYou"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchFragmentTab_Trending"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchFragmentTab_News"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchFragmentTab_Sports"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchFragmentTab_Entertainment"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpSearchFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"/>
</LinearLayout>